# hankel

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.in.md  README.md  README.rst  codecov.yaml  create_latex.sh  hankel.py  pyproject.toml  readme.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  bugs.md  feature-request.md  feature_request.md  question.md
.github/workflows/: deploy.yaml  test_suite.yaml
demos/: Demo Forward and Inverse (Hankel vs FFT).ipynb  Demo Test Forward and Inverse Transforms.ipynb
devel/: discrete_hankel_transform.ipynb  stepsizes_for_fourier.ipynb  stepsizes_for_integrals.ipynb  stepsizes_for_transforms.ipynb  three_point_basis_256_256.npy  three_point_basis_257_257.npy
docs/: Makefile  api.rst  conf.py  example_toc.rst  index.rst  make.bat  requirements.txt
docs/demos/: choosing_resolution_parameters.ipynb  forward_inverse_transform_hankel_vs_fft.ipynb  getting_started.ipynb  laplacian_hankel_vs_fft.ipynb  paper_plots.ipynb  testing_forward_and_inverse_transforms.ipynb
hankel/: __init__.py  discrete.py  hankel.py  tools.py
paper/: Makefile  paper.bib  paper.md
tests/: .syncthing.test_known_integrals.pyc.tmp  test_api.py  test_fourier.py  test_get_h.py  test_known_integrals.py  test_round_trip.py  test_transforms.py
