[metadata]
name = hankel
description = Hankel Transformations using method of Ogata 2005
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/steven-murray/hankel
author = Steven Murray
author_email = steven.g.murray@asu.edu
license = MIT
license_files = LICENSE.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Utilities
project_urls =
    Documentation = https://hankel.readthedocs.io
    Source = https://github.com/steven-murray/hankel
    Tracker = https://github.com/steven-murray/hankel/issues
    Changelog = https://github.com/steven-murray/hankel/blob/master/CHANGELOG.rst
    Conda-Forge = https://anaconda.org/conda-forge/hankel

[options]
packages = hankel
install_requires =
    mpmath>=1.0.0
    numpy>=1.9.3
    scipy>=0.16.1
python_requires = >=3.9

[options.extras_require]
dev =
    hankel[docs,tests]
docs =
    ipykernel
    nbsphinx
    numpydoc
    pandoc
    sphinx>=2.0
    sphinx-rtd-theme
tests =
    pre-commit
    pytest
    pytest-cov
